--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -12,13 +12,13 @@
     	</welcome-file>
 	</welcome-file-list>
 	<servlet>
-        <servlet-name>testREST</servlet-name>
+        <servlet-name>tlcs</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet>
     
     <servlet-mapping>
-        <servlet-name>testREST</servlet-name>
+        <servlet-name>tlcs</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
 </web-app>
